2006-04-23 Bruce Dubbs <bdubbs@linuxfromscratch.org>
	* Added qpopper initailization script and updated the Makefile

2006-04-15 Bruce Dubbs <bdubbs@linuxfromscratch.org>
	* Updated the ssh shutdown script to wait one second before setting OOM value

2006-04-11 Bruce Dubbs <bdubbs@linuxfromscratch.org>
	* Updated the netfs shutdown script to avoid errors with multiple entries

2006-04-11 Bruce Dubbs <bdubbs@linuxfromscratch.org>
	* Updated the sshd script to prevent killing ssh in Out Of Memory conditions

2006-02-05 Randy McMurchy <randy@linuxfromscratch.org>
	* Updated the GDM script to the 2.12.2 version of GNOME

2006-01-01 Randy McMurchy <randy@linuxfromscratch.org>
	* Changed the name of the D-BUS pid file that is removed

2005-11-21 Randy McMurchy <randy@linuxfromscratch.org>
	* Removed the --compress parameter from the RSync bootscript

2005-10-17 Randy McMurchy <randy@linuxfromscratch.org>
	* Updated the GDM script to the 2.12 version of GNOME

2005-10-01 Randy McMurchy <randy@linuxfromscratch.org>
	* Added HAL init script and updated Makefile to include a HAL target

2005-09-26 Randy McMurchy <randy@linuxfromscratch.org>
	* Added D-BUS init script and updated Makefile to include a D-BUS
	  target

2005-09-10 Igor Zivkovic <igor@linuxfromscratch.org>
	* Updated PPPoE service script to use the new command names.

2005-07-31 DJ Lucas <dj@linuxfromscratch.org>
	* Removed courier bootscript.
	* Removed start and restart sections of alsa bootscript.
	* Added missing echo in mysql script.
	* Reordered bootscripts for samba/cups interaction.

2005-07-08 DJ Lucas <dj@linuxfromscratch.org>
	* Moved all scripts to use new functions provided by 
	  lfs-bootscripts-3.2.1.

2005-06-26 DJ Lucas <dj@linuxfromscratch.org>
	* Added uninstall targets to Makefile.  Patch provided by 
	  Matthias Berndt.

2005-06-13 Igor Zivkovic <igor@linuxfromscratch.org>
	* Corrected the MySQL script to make it compatible with the new LFS
	  boot scripts (Jay D. McHugh).
