@@ -35,7 +35,7 @@
 <!ENTITY lfs-perl-version             "5.8.8">
 <!-- End LFS versions -->
 
-<!ENTITY blfs-bootscripts-version     "20060423">
+<!ENTITY blfs-bootscripts-version     "20060427">
 <!ENTITY blfs-bootscripts-download    "&downloads-root;/blfs-bootscripts-&blfs-bootscripts-version;.tar.bz2">
 
 <!ENTITY blfs-wiki                    "http://wiki.linuxfromscratch.org/blfs/wiki">
